@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.3.2" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.3.3" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -36,8 +36,8 @@
 			<screenshot>resources/screenshots/screenshot03a.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.3.2 - Nov. 24, 2019[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fixed TVDb for changed xml file names....AGAIN![/I]
+[B][COLOR red]Update - v3.3.3 - Nov. 24, 2019[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Sorry folks missed an entry in last update for TVDb name change[/I]
 		</news>
 	</extension>
 </addon>
